# sniff

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  clippy.toml  rustfmt.toml  test_bullshit.py  test_bullshit.rs
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.sniff/config/: learning-config.yaml
.sniff/patterns/python/: learned-patterns.yaml
.sniff/patterns/rust/: learned-patterns.yaml
design/: CLI_DESIGN.md  DECEPTION_PATTERNS.md  IMPLEMENTATION_PLAN.md  SNIFF_FOLDER_DESIGN.md
docs/: bullshit-detector-integration.md  claude-code-architecture.md  sniff-merkle-advantages.md
homebrew/: README.md  sniff.rb
integrations/: README.md  ampcode.md  claude-code.md  cursor.md  gemini-cli.md  vscode.md
integrations/claude-code/: README.md  example_workflow.md  quick_start.md  sniff_validation.sh  subagent_prompt.md
playbooks/: python-patterns.yaml  rust-patterns.yaml  typescript-patterns.yaml
scripts/: check.sh  format.sh  release.sh  todo_sniff_integration.py
src/: analysis.rs  display.rs  error.rs  hash.rs  jsonl.rs  lib.rs  main.rs  operations.rs  pattern_learning.rs  playbook.rs  progress.rs  search.rs  session.rs  simple_session_analyzer.rs  standalone.rs  storage.rs  tree.rs  types.rs  verify_todo.rs  watcher.rs
tests/: .gitignore  README.md
tests/fixtures/: clean_test.rs  debug_test.rs  final_test.rs  simple_test.rs  test_file.rs
tests/samples/: test_enhanced_patterns.rs  test_exact_patterns.py  test_new_patterns.rs  test_python.py  test_typescript_patterns.ts
