[package]
name = "sniff"
version = "0.1.0"
edition = "2021"
authors = ["Chetan Conikee <conikee@gmail.com>"]
license = "MIT"
description = "AI bullshit detector - sniff out incomplete code and false completion claims"
repository = "https://github.com/chetanconikee/sniff"
keywords = ["cli", "ai", "code-analysis", "bullshit-detector", "treesitter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations and watching
notify = "6.1"
walkdir = "2.4"
dirs = "5.0"

# Hashing and cryptography
blake3 = "1.5"
hex = "0.4"

# Database and storage
redb = "2.1"
bincode = "1.3"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Code analysis with rust-treesitter-agent-code-utility
rust_tree_sitter = { git = "https://github.com/njfio/rust-treesitter-agent-code-utility.git", features = ["serde"] }

# Pattern matching and regex
regex = "1.10"
once_cell = "1.19"

# Parallel processing
rayon = "1.8"

# Enhanced terminal output
colored = "2.1"
console = "0.15"
comfy-table = "7.1"

# YAML for playbook definitions
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
